tests/negative/_cycle_back.orb
// TODO! check there are no types where there shouldn't be (don't forget codegenAll)

// TODO! allow literals -10, +10, -10.0, +10.0
// TODO! allow typing literals (eg. 0:i64)

// TODO! replace errorUnknown with actual error messages
// TODO! remove obsolete compiler messages

// TODO! merge into master, delete branch, empty trash bin
import "tests/negative/test_import_cycle.orb";
